[package]
name = "esbuild-plugin-rswasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wasmpack_wrapper" # The name of the target.
path = "rs/lib.rs"        # The source file of the target.
crate-type = ["cdylib"]   # The crate types to generate.

[dependencies]
